// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome user Component Rendering Tests renders to UI as expected 1`] = `
<section
  className="user__content-info--welcome"
>
  <div
    className="user__content-info--welcome-user"
  >
    <div>
      <p>
        Welcome 
        Nathan
        !
      </p>
      <p>
        Rank 
        <span />
      </p>
    </div>
  </div>
  <div
    className="user__content-info--welcome-initial"
  >
    <p
      className="user__content-info--welcome-circle"
    >
      N
    </p>
  </div>
</section>
`;

exports[`Welcome user Component Rendering Tests renders to UI as expected with PROPS 1`] = `
<section
  className="user__content-info--welcome"
>
  <div
    className="user__content-info--welcome-user"
  >
    <div>
      <p>
        Welcome 
        Nathan
        !
      </p>
      <p>
        Rank 
        <span>
          Gold
        </span>
      </p>
    </div>
  </div>
  <div
    className="user__content-info--welcome-initial"
  >
    <p
      className="user__content-info--welcome-circle"
    >
      N
    </p>
  </div>
</section>
`;
